--- a/Complementario 1/index.html
+++ b/Complementario 1/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raymundo Complementario</title>
+    <title>Raymundo</title>
 </head>
 <body>
-    <h1>DESAFIO COMPLEMENTARIO</h1><br>
-    <h2>Algoritmo utilizando un ciclo</h2>
+    <h1>Simulador interactivo , Raymundo Full Shop</h1><br>
+    <h2>CODER HOUSE</h2>
     <script src="./main.js"></script>
 </body>
 </html>
