--- a/Complementario 1/index.html
+++ b/Complementario 1/index.html
@@ -7,7 +7,7 @@
     <title>Raymundo</title>
 </head>
 <body>
-    <h1>Simulador interactivo , Raymundo Full Shop</h1><br>
+    <h1>Entrega Complementaria. Usando ARRAYS</h1><br>
     <h2>CODER HOUSE</h2>
     <script src="./main.js"></script>
 </body>
